--- a/ProjectSettings/BurstAotSettings_Android.json
+++ b/ProjectSettings/BurstAotSettings_Android.json
@@ -1,16 +1,14 @@
 {
   "MonoBehaviour": {
     "Version": 4,
-    "EnableBurstCompilation": true,
+    "EnableBurstCompilation": false,
     "EnableOptimisations": true,
     "EnableSafetyChecks": false,
-    "EnableDebugInAllBuilds": false,
+    "EnableDebugInAllBuilds": true,
     "CpuMinTargetX32": 0,
     "CpuMaxTargetX32": 0,
     "CpuMinTargetX64": 0,
     "CpuMaxTargetX64": 0,
-    "CpuTargetsX32": 6,
-    "CpuTargetsX64": 72,
     "OptimizeFor": 0
   }
 }
